--- a/src/main/resources/templates/Booklist.html
+++ b/src/main/resources/templates/Booklist.html
@@ -2,36 +2,35 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Add Book</title>
-
-
+<title>Booklist</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
+<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Books</h1>
-    <table>
+	<table class="table table-striped" >
 		<tr>
-		    <th>Author</th>
-		    <th>Title</th>
-		    <th>ISBN</th>
-		    <th>Year</th>
-		    <th>Price</th>
-		    
-		    
-		</tr>  
-    	<tr th:each = "book : ${books}">
-    		<td th:text="${book.author}"></td>
-    		<td th:text="${book.title}"></td>
-    		<td th:text="${book.isbn}"></td>
-    		<td th:text="${book.year}"></td>
-    		<td th:text="${book.price}"></td>
-    		
- 				<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>  
- 				<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>   		
-    	</tr>
-     </table>
-	 <a href="/add">Add Book</a>    	
+			<th>Author</th>
+			<th>Title</th>
+			<th>ISBN</th>
+			<th>Year</th>
+			<th>Price</th>
+
+
+		</tr>
+		<tr th:each="book : ${books}">
+			<td th:text="${book.author}"></td>
+			<td th:text="${book.title}"></td>
+			<td th:text="${book.isbn}"></td>
+			<td th:text="${book.year}"></td>
+			<td th:text="${book.price}"></td>
+
+			<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+			<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
+		</tr>
+	</table>
+	<a href="/add">Add Book</a>
 </body>
 </html>
