--- a/src/main/resources/templates/Booklist.html
+++ b/src/main/resources/templates/Booklist.html
@@ -17,6 +17,7 @@
 			<th>ISBN</th>
 			<th>Year</th>
 			<th>Price</th>
+			<th>Category</th>
 
 
 		</tr>
@@ -26,11 +27,12 @@
 			<td th:text="${book.isbn}"></td>
 			<td th:text="${book.year}"></td>
 			<td th:text="${book.price}"></td>
+			<td th:text="${book.category.name}"></td> 
 
-			<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
-			<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
+			<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+			<td><a class="btn btn-info" th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
 		</tr>
 	</table>
-	<a href="/add">Add Book</a>
+	<a class="btn btn-success" href="/add">Add Book</a>
 </body>
 </html>
