--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -19,8 +19,17 @@
 			type="text" id="year" th:field="*{year}"> <label for="isbn">ISBN</label>
 		<input type="text" id="isbn" th:field="*{isbn}"> <label
 			for="price">Price</label> <input type="text" id="price"
-			th:field="*{price}"> <input type="submit"
-			class="btn btn-success" value="Save">
+			th:field="*{price}">
+
+		<div style="clear: both; display: block; height: 10px;"></div>
+		<label for="catlist">Category</label> <select id="catlist"
+			th:field="*{category}" class="form-control">
+			<option th:each="category: ${categories}"
+				th:value="${category.categoryId}" th:text="${category.name}"></option>
+		</select> 
+		
+		<div style="clear: both; display: block; height: 10px;"></div>
+		<input type="submit" class="btn btn-success" value="Save">
 	</form>
 </div>
 
