--- a/src/main/resources/templates/Booklist.html
+++ b/src/main/resources/templates/Booklist.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
 <title>Booklist</title>
@@ -9,30 +10,45 @@
 	th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
-	<h1>Books</h1>
-	<table class="table table-striped" >
-		<tr>
-			<th>Author</th>
-			<th>Title</th>
-			<th>ISBN</th>
-			<th>Year</th>
-			<th>Price</th>
-			<th>Category</th>
+	<div class="container">
+		<div class="col-md-4">
+			<h1>Books</h1>
+		</div>
+		<div class="col-md-4">
+			<h3 th:inline="text">Welcome
+				[[${#httpServletRequest.remoteUser}]]</h3>
+		</div>
+		<table class="table table-striped">
+			<tr>
+				<th>Author</th>
+				<th>Title</th>
+				<th>ISBN</th>
+				<th>Year</th>
+				<th>Price</th>
+				<th>Category</th>
+				<th sec:authorize="hasRole('ADMIN')"></th>
+			</tr>
+			<tr th:each="book : ${books}">
+				<td th:text="${book.author}"></td>
+				<td th:text="${book.title}"></td>
+				<td th:text="${book.isbn}"></td>
+				<td th:text="${book.year}"></td>
+				<td th:text="${book.price}"></td>
+				<td th:text="${book.category.name}"></td>
+				<td sec:authorize="hasRole('ADMIN')"><a
+					th:href="@{/delete/{id}(id=${book.id})}"
+					class="btn btn-xs btn-danger">Delete</a></td>
+				<td sec:authorize="hasRole('ADMIN')"><a
+					th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-info">Edit</a></td>
+			</tr>
+		</table>
+		<a class="btn btn-success" href="/add">Add Book</a> <br> <br>
 
-
-		</tr>
-		<tr th:each="book : ${books}">
-			<td th:text="${book.author}"></td>
-			<td th:text="${book.title}"></td>
-			<td th:text="${book.isbn}"></td>
-			<td th:text="${book.year}"></td>
-			<td th:text="${book.price}"></td>
-			<td th:text="${book.category.name}"></td> 
-
-			<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
-			<td><a class="btn btn-info" th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
-		</tr>
-	</table>
-	<a class="btn btn-success" href="/add">Add Book</a>
+		<div class="col-md-4" style="padding: 20px 0">
+			<form th:action="@{/logout}" method="post">
+				<input type="submit" value="Sign Out" class="btn btn-sm btn-danger" />
+			</form>
+		</div>
+	</div>
 </body>
 </html>
